crates/ir/tests/snapshots/lower_test__inference__explicit_type_args.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module inference__explicit_type_args

declare map: (List[w], (w) -> y) -> List[y]

fn identity(v0: t7) -> t7 =
  v0

fn stringify(v1: Int) -> String =
  "n"

fn call_site() -> Int =
  let v2: Int = call identity(42)
  v2

fn standalone() -> Int =
  let v3: (Int) -> Int = make_closure(identity, [])
  let v4: Int = call_closure v3(42)
  v4

fn method_site(v5: List[Int]) -> List[String] =
  let_join v9(v7: (Int) -> String) =
    let v8: List[String] = call map(v5, v7)
    v8
  in
  let v6: (Int) -> String = make_closure(stringify, [])
  jump v9(v6)
