crates/ir/tests/snapshots/lower_test__inference__monomorphism_let.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module inference__monomorphism_let

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[s8]): List[s8]
import core/io/println as println(s): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
fn main() -> Int =
  let v0: (Int) -> Int = make_closure(lambda$26, [])
  let v3: Int = call_closure v0(5)
  v3

fn lambda$26(v1: Int) -> Int =
  let v2: Int = mul_int(v1, v1)
  v2
