crates/ir/tests/snapshots/lower_test__inference__multi_def.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module inference__multi_def

fn id(v0: r7) -> r7 =
  v0

fn always(v1: u7, v2: v7) -> u7 =
  v1
